# Android-OpenXR-Overlay

./: README.md
Projects/3Doverlay/: settings.gradle.kts
Projects/3Doverlay/app/src/main/assets/: fragment_shader.glsl  vertex_shader.glsl
Projects/3Doverlay/app/src/main/cpp/: CMakeLists.txt  XrSwapchainImageOpenGLESKHR.h  custom_monado_runtime.cpp
Projects/3Doverlay/app/src/main/cpp/openxr/include/openxr/: openxr.h
Projects/3Doverlay/gradle/wrapper/: gradle-wrapper.properties
Projects/base/app/: build.gradle.kts
Projects/base/app/src/main/: AndroidManifest.xml
Projects/base/app/src/main/cpp/: CMakeLists.txt  custom_monado_runtime.cpp
Projects/base/app/src/main/cpp/openxr/include/openxr/: openxr.h
Projects/base/app/src/main/res/values/: themes.xml
Projects/overlay1/app/: build.gradle.kts
Projects/overlay1/app/src/main/: AndroidManifest.xml
Projects/overlay1/app/src/main/cpp/: custom_monado_runtime.cpp
Projects/overlay1/app/src/main/res/values-night/: themes.xml
Projects/overlay1/gradle/: libs.versions.toml
Projects/overlay2/app/: build.gradle.kts
Projects/overlay2/app/src/main/: AndroidManifest.xml
Projects/overlay2/app/src/main/cpp/: Android.mk  custom_monado_runtime.cpp  main.cpp
Projects/overlay2/app/src/main/res/values/: themes.xml
Projects/overlay3/app/: build.gradle.kts
Projects/overlay3/app/src/main/: AndroidManifest.xml
Projects/overlay3/app/src/main/assets/: monado_axr.json
Projects/overlay3/app/src/main/cpp/: custom_monado_runtime.cpp  native-lib.cpp
Projects/overlay3/app/src/main/res/values/: strings.xml
(+14 files in other folders)
